crates/marain-core/tests/fixtures/errors/14_pro_missing_in.lat
pro ^i 0..10 :
    dic ^i.
